--- a/ui/src/app/components/rollout/rollout.scss
+++ b/ui/src/app/components/rollout/rollout.scss
@@ -441,5 +441,9 @@
         }
     }
 }
-
-
+.report-bg {
+    border: 1px solid #ccd6dd;
+    border-radius: 5px;
+    padding: 0px;
+    background-color: #fff;
+}
